# ml-tableau

./: .gitignore  .gitmodules
docs/: .gitignore  00-introduction.md  00-introduction.tex  01-preliminaries.md  01-preliminaries.tex  02-modal-patterns.md  02-modal-patterns.tex  03-qf-patterns.md  03-qf-patterns.tex  04-guarded-patterns.md  04-guarded-patterns.tex  05-conclusion.md  05-conclusion.tex  06-appendix.md  appendix.md  build-docs  example.md  game-preliminaries.md  introduction.md  modal-matching-logic.md  preliminaries.md  prelude.tex  qf-matching-logic.md  refs.bib  rodrigues-chen-rosu-2022-lics.tex  tableau.md  template.tex
docs/figs/: decidable-fragments.pdf_tex  decidable-theories.pdf_tex  guarded-tableau.tex  ml-as-basis-for-k.pdf_tex  ml-as-basis-for-k.pdf_tex.aux
haskell/: .gitignore  README.md  Test  ml-tableau.cabal  stack.yaml
haskell/ftest/: 1.expected  1.input
haskell/src/: Main.hs  Pattern.hs  PatternTest.hs  SampleTest.hs  TestMain.hs  Thing.hs
python/: Test  tableau.py  tableau_test.py
