name:                ml-tableau
version:             0.1.0.0
synopsis:            Decision procedure for guarded matching logic
description:         Write me!
homepage:            https://github.com/nishantjr/ml-tableau
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Nishant Rodrigues <nishantjr@gmail.com>
maintainer:          Nishant Rodrigues <nishantjr@gmail.com>
copyright:           2021 Nishant Rodrigues
category:            Formal Methods
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ml-tableau
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Pattern
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, composition, containers, keys

test-suite test-ml-tableau
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             TestMain.hs
  other-modules:       PatternTest, Pattern, Thing
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, composition, containers, keys
                     , HTF
